CM-13 add crud operatio nfor rooms
